--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-REACT_APP_SARISKA_MEET_APP_API_KEY = 'your api key'
+REACT_APP_SARISKA_MEET_APP_API_KEY = 2e946faa8fd84f137238d4e135edadc736c001b58cb53d8a2ed1
 REACT_APP_API_SERVICE_HOST =  https://api.sariska.io/
 REACT_APP_API_SERVICE_HOST_NAME = meet.sariska.io
 REACT_APP_LOGO = https://assets.sariska.io/Logo_Sariska.svg
