--- a/package.json
+++ b/package.json
@@ -40,10 +40,14 @@
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "start": "env-cmd -f .env react-scripts   --openssl-legacy-provider  start",
-    "build": "env-cmd -f .env react-scripts --openssl-legacy-provider  build",
+    "start": "env-cmd -f .env.production react-scripts   --openssl-legacy-provider  start",
+    "build": "react-scripts --openssl-legacy-provider  build",
+    "build:development": "env-cmd -f .env.development npm run build",
+    "build:production": "env-cmd -f .env.production npm run build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy:development": "aws s3 cp build s3://meet.dev.sariska.io --recursive --acl public-read && aws cloudfront create-invalidation --distribution-id EITMHLTHLYEHH --paths / /bundle.js /index.html",
+    "deploy:production": "aws s3 cp build s3://meet.sariska.io --recursive --acl public-read && aws cloudfront create-invalidation --distribution-id EG507YR0NNTZF --paths / /bundle.js /index.html"
   },
   "eslintConfig": {
     "extends": ["react-app", "react-app/jest"]
